--- a/Project_for_Housing_Dataset.ipynb
+++ b/Project_for_Housing_Dataset.ipynb
@@ -47,95 +47,24 @@
      ]
     },
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Choice(1-> print Dataset,2->Print 5 Rows, 3->Exit, 4->Data Types, 5->Last5,6-> Column,7-> Describe,,8-> mean,9-> median,,10-> mode,11-> dropduplicate,12-> fillmissing,13-> nullvalues,14-> hist,15-> info,16-> scatterplot,17-> lineplot,18 -> Value Counts (Single Column),19 -> Filter Rows (Condition),20-> html):  20\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ace55bacf024bfc9e721ad763160eec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "                                             |                                             | [  0%]   00:00 ->…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Choice(1-> print Dataset,2->Print 5 Rows, 3->Exit, 4->Data Types, 5->Last5,6-> Column,7-> Describe,,8-> mean,9-> median,,10-> mode,11-> dropduplicate,12-> fillmissing,13-> nullvalues,14-> hist,15-> info,16-> scatterplot,17-> lineplot,18 -> Value Counts (Single Column),19 -> Filter Rows (Condition),20-> html):  19\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the condition (e.g., population > 1000):  18\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "longitude              -122.26\n",
-      "latitude                 37.84\n",
-      "housing_median_age        50.0\n",
-      "total_rooms             2239.0\n",
-      "total_bedrooms           455.0\n",
-      "population               990.0\n",
-      "households               419.0\n",
-      "median_income           1.9911\n",
-      "median_house_value    158700.0\n",
-      "ocean_proximity       NEAR BAY\n",
-      "Name: 18, dtype: object\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Choice(1-> print Dataset,2->Print 5 Rows, 3->Exit, 4->Data Types, 5->Last5,6-> Column,7-> Describe,,8-> mean,9-> median,,10-> mode,11-> dropduplicate,12-> fillmissing,13-> nullvalues,14-> hist,15-> info,16-> scatterplot,17-> lineplot,18 -> Value Counts (Single Column),19 -> Filter Rows (Condition),20-> html):  18\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the column name for value counts:  population\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "population\n",
-      "891.0     25\n",
-      "761.0     24\n",
-      "1227.0    24\n",
-      "1052.0    24\n",
-      "850.0     24\n",
-      "          ..\n",
-      "2141.0     1\n",
-      "5546.0     1\n",
-      "3186.0     1\n",
-      "3590.0     1\n",
-      "6912.0     1\n",
-      "Name: count, Length: 3888, dtype: int64\n"
+      "Report report3.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
      ]
     }
    ],
@@ -197,7 +126,7 @@
     "               if rchoice == '17':\n",
     "                    sns.lineplot(x= dataSet.index, y='median_income', data=dataSet)\n",
     "                    plt.show()\n",
-    "               if rchoice == '21':\n",
+    "               if rchoice == '20':\n",
     "                   report = sv.analyze(dataSet)\n",
     "                   report.show_html('report3.html')\n",
     "               if rchoice == '18':\n",
@@ -227,15 +156,185 @@
     "            print('\\nInvalid input!!!')\n",
     "\n",
     "\n",
-    "main()\n",
-    "report = sv.analyze(data)\n",
-    "report.show_html('report3.html')"
+    "main()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b655cea2-7fa7-4ca9-bda9-b8469bab2c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAIN MENU\n",
+      "1. Dataset Operation\n",
+      "2. File Operation\n",
+      "3. EXIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import nan\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sweetviz as sv\n",
+    "\n",
+    "def main_menu():\n",
+    "    print(\"MAIN MENU\")\n",
+    "    print(\"1. Dataset Operation\")\n",
+    "    print(\"2. File Operation\")\n",
+    "    print(\"3. EXIT\")\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        main_menu()\n",
+    "        choice = input('\\nEnter choice(1, 2 or 3): ')\n",
+    "        if choice == '1':\n",
+    "            print(\"\\nThank you for choosing Dataset operation\")\n",
+    "            while True:\n",
+    "                rchoice = input('Choice(1-> Print Dataset, 2-> Print 5 Rows, 3-> Exit, 4-> Data Types, 5-> Last 5 Rows,\\n6-> Columns, 7-> Describe, 8-> Mean, 9-> Median, 10-> Mode, 11-> Drop Duplicate, 12-> Fill Missing,\\n13-> Null Values, 14-> Histogram, 15-> Info, 16-> Scatter Plot, 17-> Line Plot,\\n18-> Value Counts, 19-> Filter Rows, 20-> Generate HTML Report, 21-> Unique Values,\\n22-> Sort Values, 23-> Evaluate Expression, 24-> Add New Column, 25-> Remove Column,\\n26-> Rename Columns, 27-> Reset Index, 28-> Group By Column, 29-> Pivot Table, 30-> Save to CSV): ')\n",
+    "\n",
+    "                dataSet = pd.read_csv(r'D:\\Py-6\\Housing.csv', header=0, sep=\",\")\n",
+    "                print()\n",
+    "\n",
+    "                if rchoice == '1':\n",
+    "                    print(dataSet)\n",
+    "                elif rchoice == '2':\n",
+    "                    print(dataSet.head())\n",
+    "                elif rchoice == '3':\n",
+    "                    print('\\nExiting Dataset Operations...')\n",
+    "                    break\n",
+    "                elif rchoice == '4':\n",
+    "                    print(dataSet.dtypes)\n",
+    "                elif rchoice == '5':\n",
+    "                    print(dataSet.tail())\n",
+    "                elif rchoice == '6':\n",
+    "                    print(dataSet.columns)\n",
+    "                elif rchoice == '7':\n",
+    "                    print(dataSet.describe())\n",
+    "                elif rchoice == '8':\n",
+    "                    print(dataSet[\"population\"].mean())\n",
+    "                elif rchoice == '9':\n",
+    "                    print(dataSet[\"population\"].median())\n",
+    "                elif rchoice == '10':\n",
+    "                    print(dataSet[\"population\"].mode())\n",
+    "                elif rchoice == '11':\n",
+    "                    print(dataSet.drop_duplicates())\n",
+    "                elif rchoice == '12':\n",
+    "                    print(dataSet.fillna(0))\n",
+    "                elif rchoice == '13':\n",
+    "                    print(dataSet.isnull().sum())\n",
+    "                elif rchoice == '14':\n",
+    "                    sns.histplot(x='total_rooms', data=dataSet)\n",
+    "                    plt.show()\n",
+    "                elif rchoice == '15':\n",
+    "                    print(dataSet.info())\n",
+    "                elif rchoice == '16':\n",
+    "                    sns.scatterplot(x='households', y='median_income', data=dataSet)\n",
+    "                    plt.show()\n",
+    "                elif rchoice == '17':\n",
+    "                    sns.lineplot(x=dataSet.index, y='median_income', data=dataSet)\n",
+    "                    plt.show()\n",
+    "                elif rchoice == '18':\n",
+    "                    column = input(\"Enter the column name for value counts: \")\n",
+    "                    if column in dataSet.columns:\n",
+    "                        print(dataSet[column].value_counts())\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '19':\n",
+    "                    condition = input(\"Enter the condition (e.g., population > 1000): \")\n",
+    "                    try:\n",
+    "                        filtered_data = dataSet.query(condition)\n",
+    "                        print(filtered_data)\n",
+    "                    except Exception as e:\n",
+    "                        print(\"Error in filtering rows:\", e)\n",
+    "                elif rchoice == '20':\n",
+    "                    report = sv.analyze(dataSet)\n",
+    "                    report.show_html('report3.html')\n",
+    "                elif rchoice == '21':\n",
+    "                    column = input(\"Enter the column name for unique values: \")\n",
+    "                    if column in dataSet.columns:\n",
+    "                        print(dataSet[column].unique())\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '22':\n",
+    "                    column = input(\"Enter the column name to sort by: \")\n",
+    "                    if column in dataSet.columns:\n",
+    "                        print(dataSet.sort_values(by=column))\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '23':\n",
+    "                    expression = input(\"Enter the expression to evaluate (e.g., 2 + 2 or dataSet['population'].mean()): \")\n",
+    "                    try:\n",
+    "                        result = eval(expression)\n",
+    "                        print(\"Result:\", result)\n",
+    "                    except Exception as e:\n",
+    "                        print(\"Error in evaluating expression:\", e)\n",
+    "                elif rchoice == '24':\n",
+    "                    new_col_name = input(\"Enter new column name: \")\n",
+    "                    default_value = input(\"Enter default value for the new column: \")\n",
+    "                    dataSet[new_col_name] = default_value\n",
+    "                    print(dataSet.head())\n",
+    "                elif rchoice == '25':\n",
+    "                    column = input(\"Enter the column name to remove: \")\n",
+    "                    if column in dataSet.columns:\n",
+    "                        dataSet = dataSet.drop(columns=[column])\n",
+    "                        print(f\"Column '{column}' removed.\")\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '26':\n",
+    "                    old_name = input(\"Enter the column name to rename: \")\n",
+    "                    new_name = input(\"Enter the new name: \")\n",
+    "                    if old_name in dataSet.columns:\n",
+    "                        dataSet = dataSet.rename(columns={old_name: new_name})\n",
+    "                        print(dataSet.head())\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '27':\n",
+    "                    dataSet = dataSet.reset_index(drop=True)\n",
+    "                    print(\"Index reset successfully.\")\n",
+    "                elif rchoice == '28':\n",
+    "                    column = input(\"Enter the column name to group by: \")\n",
+    "                    if column in dataSet.columns:\n",
+    "                        grouped = dataSet.groupby(column).mean()\n",
+    "                        print(grouped)\n",
+    "                    else:\n",
+    "                        print(\"Column not found!\")\n",
+    "                elif rchoice == '29':\n",
+    "                    index_col = input(\"Enter the column name for pivot index: \")\n",
+    "                    columns_col = input(\"Enter the column name for pivot columns: \")\n",
+    "                    values_col = input(\"Enter the column name for pivot values: \")\n",
+    "                    if index_col in dataSet.columns and columns_col in dataSet.columns and values_col in dataSet.columns:\n",
+    "                        pivot = dataSet.pivot(index=index_col, columns=columns_col, values=values_col)\n",
+    "                        print(pivot)\n",
+    "                    else:\n",
+    "                        print(\"One or more columns not found!\")\n",
+    "                elif rchoice == '30':\n",
+    "                    save_path = input(\"Enter the file path to save the dataset: \")\n",
+    "                    dataSet.to_csv(save_path, index=False)\n",
+    "                    print(\"Dataset saved successfully.\")\n",
+    "                else:\n",
+    "                    print(\"Invalid input! Please try again.\")\n",
+    "\n",
+    "        elif choice == '2':\n",
+    "            print('\\nThank you for choosing File operation.')\n",
+    "        elif choice == '3':\n",
+    "            print('\\nThanks for using the program. Goodbye!')\n",
+    "            break\n",
+    "        else:\n",
+    "            print('\\nInvalid input!!!')\n",
+    "\n",
+    "main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ef76f8-427a-40e8-80cd-202855698694",
    "metadata": {},
    "outputs": [],
    "source": []
